add test check for push

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "prepare": "husky install",
-    "prettier": "pretty-quick --pattern \"src/**/*.{ts,js,scss,html}\" --staged --verbose"
+    "prettier": "pretty-quick --pattern \"src/**/*.{ts,js,scss,html}\" --staged --verbose",
+    "test-headless": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI "
   },
   "private": true,
   "dependencies": {
